# p21-script

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-ql.yml
docs/: FAB.csv  FALL.csv  ICD.csv  OPS.csv  components.puml  dwh_activity.puml  p21_specs_2021-02-24.xlsx
src/: p21import.py  p21import_bill.py  p21import_enc.py
test/: one_way_encoding.py  test_anon.py  test_debugging_OPS.py  test_encoding.py  test_p21importer.py  test_unzip_rename_zip.py
test/integration/: test_CSVObservationFactUploadManager.py  test_DatabaseEncounterMatcher.py  test_ExtractorByBillingId.py  test_ObservationFactTableHandler.py
test/local/: import_local.py  p21importer_old.py
test/resources/: aktin.properties  create_p21_test_data.py
test/unit/: test_AktinPropertiesReader.py  test_CSVObservationFactConverter.py  test_CSVPreprocessor.py  test_FABObservationFactConverter.py  test_FABVerifier.py  test_FALLObservationFactConverter.py  test_FALLVerifier.py  test_ICDObservationFactConverter.py  test_ICDVerifier.py  test_OPSObservationFactConverter.py  test_OPSVerifier.py  test_OneWayAnonymizer.py  test_TmpFolderManager.py  test_ZipFileExtractor.py
