[project]
name = "p21-script"
version = "0.1.0"
description = "A Python script to import inpatient treatment data according to ยง 21 KHEntgG into the AKTIN DWH"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.3.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9.0",
    "chardet>=5.2.0",
]
